--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">DEEP-AQUA</a>
+              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -135,25 +135,15 @@
 
         <div class="advice">
 
+          <h2 class="advice__title">Оставьте заявку на консультацию</h2>
           <div class="container-article">
-            <h2 class="advice__title">Консультация</h1>
-            <p class="advice__content">Text</p>
-            <p class="advice__content">Text</p>
-          </div>
-          <div class="container-article">
-            <form class="advice__form" action="">
-              <div class="form-group">
-                <label class="label-first" for="first-name">Имя</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Имя">
-              </div>
-              <div class="form-group">
-                <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
-              </div>
-            </form>
+            <p class="advice__content">Это бесплатно</p>
+            <p class="advice__content">Мы перезвоним прямо сейчас</p>
+            <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
+            <p class="advice__content">И подарим бесплатное сервисное обслуживание на год!</p>
           </div>
           <div class="button-wrapper">
-            <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
+            <a href="#" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
           </div>
 
         </div><!-- /.advice -->
