--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="#">DEEP-AQUA</a>
+              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -53,13 +53,49 @@
         </div>
 
         <div class="infographics">
-          <h2 class="infographics__title">Всем необходима чистая питьевая вода</h2>
+          <h2 class="infographics__title">В чем преимущество фильтров <strong>Aquel?</strong></h2>
 
           <div class="infographics-wrapper-first-block">
 
-            <div class="infographics-first-block__image">
-              <img src="img/infographics/family1.png" width="500" height="500" alt="">
-            </div>
+            <div class="infographics-first-block__slider">
+
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+
+                  <div class="item active">
+                    <img src="img/aquel-1000-slider.png" alt="Фильтр Aquel 1000">
+                    <div class="carousel-caption">
+
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <img src="img/aquel-200+box-slider.png" alt="Фильтр Aquel 200">
+                    <div class="carousel-caption">
+
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <img src="img/aquel-zero-slider.png" alt="Фильтр Aquel Zero">
+                    <div class="carousel-caption">
+
+                    </div>
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div><!-- /.Slider -->
 
             <div class="infographics-first-block__content">
               <div class="infographics-first-block__content-item-one">
@@ -67,11 +103,11 @@
                   <h3 class="question-content-one__title">
                     <span>
                       <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 48 48"><path d="M6 10H2v32c0 2.21 1.79 4 4 4h32v-4H6V10zm22 20h4V10h-8v4h4v16zM42 2H14c-2.21 0-4 1.79-4 4v28c0 2.21 1.79 4 4 4h28c2.21 0 4-1.79 4-4V6c0-2.21-1.79-4-4-4zm0 32H14V6h28v28z"/></svg>
-                    </span>ВЫ ПОКУПАЕТЕ ВОДУ?</h3>
+                    </span>ЕВРОПЕЙСКОЕ КАЧЕСТВО</h3>
                   <ul class="infographics-first-block__question-list-one">
-                    <li>В среднем, бутыль воды 19 литров стоит 180 рублей</li>
-                    <li>Семья из 4 человек покупает около 15 бутылей в месяц</li>
-                    <li>Это стоит Вам <strong>32 400</strong> рублей в год!</li>
+                    <li>Запатентованные технологии</li>
+                    <li>Максимальная степень очистки</li>
+                    <li>Обогащение активными минералами</li>
                   </ul>
 
               </div>
@@ -81,11 +117,11 @@
               <div class="infographics-first-block__content-item-two">
 
                   <h3 class="question-content-two__title">
-                    <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 48 48"><path d="M6 10H2v32c0 2.21 1.79 4 4 4h32v-4H6V10zm36-8H14c-2.21 0-4 1.79-4 4v28c0 2.21 1.79 4 4 4h28c2.21 0 4-1.79 4-4V6c0-2.21-1.79-4-4-4zm0 32H14V6h28v28zm-8-8h-8v-4h4c2.21 0 4-1.79 4-4v-4c0-2.21-1.79-4-4-4h-8v4h8v4h-4c-2.21 0-4 1.79-4 4v8h12v-4z"/></svg></span>ЗА ЭТИ ДЕНЬГИ ВЫ УВЕРЕНЫ:</h3>
+                    <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 48 48"><path d="M6 10H2v32c0 2.21 1.79 4 4 4h32v-4H6V10zm36-8H14c-2.21 0-4 1.79-4 4v28c0 2.21 1.79 4 4 4h28c2.21 0 4-1.79 4-4V6c0-2.21-1.79-4-4-4zm0 32H14V6h28v28zm-8-8h-8v-4h4c2.21 0 4-1.79 4-4v-4c0-2.21-1.79-4-4-4h-8v4h8v4h-4c-2.21 0-4 1.79-4 4v8h12v-4z"/></svg></span>МАЛАЯ ЦЕНА ВЛАДЕНИЯ</h3>
                   <ul class="infographics-first-block__question-list-two">
-                    <li>В качестве воды?</li>
-                    <li>В ее происхождении?</li>
-                    <li>В чистоте тары?</li>
+                    <li>Гарантия от 5 лет!</li>
+                    <li>Аналогов за эту цену - нет</li>
+                    <li>Обслуживание один раз в 10 месяцев</li>
                   </ul>
 
               </div>
@@ -97,11 +133,11 @@
                   <h3 class="question-content-three__title">
                     <span>
                       <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 48 48"><path d="M42 2H14c-2.21 0-4 1.79-4 4v28c0 2.21 1.79 4 4 4h28c2.21 0 4-1.79 4-4V6c0-2.21-1.79-4-4-4zm0 32H14V6h28v28zM6 10H2v32c0 2.21 1.79 4 4 4h32v-4H6V10zm28 16v-3c0-1.66-1.34-3-3-3 1.66 0 3-1.34 3-3v-3c0-2.21-1.79-4-4-4h-8v4h8v4h-4v4h4v4h-8v4h8c2.21 0 4-1.79 4-4z"/></svg>
-                    </span>ПРИ ЭТОМ ВЫ ВЫНУЖДЕНЫ:</h3>
+                    </span>КУПИТЬ ЛЕГКО И БЕЗОПАСНО</h3>
                   <ul class="infographics-first-block__question-list-three">
-                    <li>Занимать место бутылками</li>
-                    <li>Следить за количеством оставшейся воды</li>
-                    <li>Вовремя заказывать воду и ждать привоза</li>
+                    <li>Бесплатная доставка</li>
+                    <li>Бесплатный монтаж</li>
+                    <li>Консультация перед покупкой</li>
                   </ul>
 
               </div>
@@ -109,98 +145,19 @@
             </div>
           </div><!-- /.infographics-wrapper-first-block -->
 
-          <div class="infographics-wrapper-second-block">
-
-            <h3 class="infographics-second-block__title">Системы <strong>Aquel</strong> помогут не только сэкономить, но и сделают Вашу жизнь комфортнее:</h3>
-            <div class="divider-main divider-main--info"></div>
-            <p class="infographics-second-block__sub-title">Вы получите чистую, полезную питьевую воду!</p>
-
-            <div class="infographics-second-block__list-wrapper">
-              <ul class="infographics-second-block__list">
-                <li>Очищенная вода гипоаллергенна</li>
-                <li>Полностью пригодна для грудных детей</li>
-                <li>Вода обогащена кальцием и магнием</li>
-                <li>Не меняет вкус и запах пищи</li>
-              </ul>
-              <ul class="infographics-second-block__list">
-                <li>Очищенная вода имеет pH 8 - 8,5</li>
-                <li>Нормализует обмен веществ</li>
-                <li>Фильтры <strong>Aquel</strong> занимают мало места</li>
-                <li>Не надо ждать и занимать место бутылками</li>
-              </ul>
-            </div>
-
-
-          </div><!-- /.infographics-wrapper-second-block -->
-
-          <div class="infographics-wrapper-third-block">
-
-            <h3 class="infographics-third-block__title">КУПИТЬ ФИЛЬТР ИЛИ  ВОДУ В БУТЫЛЯХ?</h3>
-            <div class="divider-main divider-main--info"></div>
-            <p class="infographics-third-block__sub-title">Сравним за период использования в 5 лет:</p>
-
-            <div class="infographics-third-block__list-wrapper">
-
-              <ul class="infographics-third-block__list">
-                <li>За 5 лет покупок</li>
-                <li>бутилированной воды,</li>
-                <li>семья потратит:</li>
-                <li>5 * 32 400</li>
-                <li>=</li>
-                <li class="infographics-third-block__feature-item-one">162 000</li>
-              </ul>
-
-              <ul class="infographics-third-block__list">
-                <li>Использование систем</li>
-                <li><strong>Aquel:</strong></li>
-                <li>Фильтр - 44 980</li>
-                <li>Сервис за 5 лет - 14 000</li>
-                <li>=</li>
-                <li class="infographics-third-block__feature-item-two">58 980</li>
-              </ul>
-
-              <ul class="infographics-third-block__list">
-                <li>Экономия составит</li>
-                <li>более ста тысяч рублей!</li>
-                <li>Это целый бюджет на</li>
-                <li>отдых всей семьей</li>
-                <li>=</li>
-                <li class="infographics-third-block__feature-item-three">103 020</li>
-              </ul>
-
-            </div>
-            <div class="divider-main divider-main--info"></div>
-
-            <p class="infographics-third-block__content">При этом вы получаете <strong>бесплатное</strong> сервисное обслуживание на год - <strong>в подарок!</strong></p>
-            <p class="infographics-third-block__content">Бесплатную доставку, монтаж за наш счет, а главное:</p>
-            <p class="infographics-third-block__content">Чистую питьевую воду и здоровье всей семьи!</p>
-
-          </div><!-- /.infographics-wrapper-third-block -->
-
         </div><!-- /.infographics -->
 
         <div class="advice">
+
           <h2 class="advice__title">Оставьте заявку на консультацию</h2>
           <div class="container-article">
             <p class="advice__content">Это бесплатно</p>
-            <p class="advice__content">Мы перезвоним в рабочее время</p>
+            <p class="advice__content">Мы перезвоним прямо сейчас</p>
             <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
             <p class="advice__content">И подарим бесплатное сервисное обслуживание на год!</p>
           </div>
-          <div class="container-article container-article--form">
-            <form class="advice__form" id="form-consultation" action="">
-              <div class="form-group">
-                <label class="label-first" for="first-name">Имя</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Ваше Имя">
-              </div>
-              <div class="form-group">
-                <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
-              </div>
-            </form>
-          </div>
-          <div class="button-wrapper" form="form-consultation">
-            <button type="submit" class="btn btn-default btn--form">ОТПРАВИТЬ</button>
+          <div class="button-wrapper">
+            <a href="#" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
           </div>
 
         </div><!-- /.advice -->
