--- a/certificate-of-quality.html
+++ b/certificate-of-quality.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="index.html">DEEP-AQUA</a>
+              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
