--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="infographics">
-          <h2 class="infographics__title">В чем преимущество фильтров <strong>Aquel?</strong></h2>
+          <h2 class="infographics__title">В чем преимущество фильтров для воды <strong>Aquel?</strong></h2>
 
           <div class="infographics-wrapper-first-block">
 
