--- a/index.html
+++ b/index.html
@@ -44,16 +44,24 @@
 
       <section class="main">
 
-        <div class="introduction">
-          <h1 class="introduction__title  animation-fadeIn">Лидер систем водоочистки в Европе</h1>
-          <span class="introduction__aquel-title animation-fadeIn">Aquel</span>
-          <div class="introduction__img">
+        <div class="welcome-to-shop">
+          <h1 class="welcome-to-shop__title animation-fadeIn">Добро пожаловать!</h1>
+          <p class="welcome-to-shop__subtitle animation-fadeIn">В мир чистой питьевой воды</p>
+          <div class="button-wrapper">
+            <a class="btn btn-default btn--welcome-to-shop animation-fadeIn" href="catalog.html" role="button">КАТАЛОГ</a>
+          </div>
+        </div>
 
+        <div class="introduction">
+          <h2 class="introduction__title fadein-post">Лидер систем водоочистки в Европе</h2>
+          <span class="introduction__aquel-title fadein-post">Aquel</span>
+          <div class="button-wrapper">
+            <a class="btn btn-default btn--welcome-to-shop animation-fadeIn" href="aquel-tehnology.html" role="button">ТЕХНОЛОГИИ</a>
           </div>
         </div>
 
         <div class="infographics">
-          <h2 class="infographics__title">В чем преимущество фильтров для воды <strong>Aquel?</strong></h2>
+          <h2 class="infographics__title fadein-post">В чем преимущество фильтров для воды <strong>Aquel?</strong></h2>
 
           <div class="infographics-wrapper-first-block">
 
@@ -71,21 +79,21 @@
                 <div class="carousel-inner" role="listbox">
 
                   <div class="item active">
-                    <img src="img/aquel-1000-slider.png" alt="Фильтр Aquel 1000">
+                    <img src="img/aquel-1000-slider.png" alt="Фильтр для воды Aquel 1000">
                     <div class="carousel-caption">
 
                     </div>
                   </div>
 
                   <div class="item">
-                    <img src="img/aquel-200+box-slider.png" alt="Фильтр Aquel 200">
+                    <img src="img/aquel-200+box-slider.png" alt="Фильтр для воды Aquel 200">
                     <div class="carousel-caption">
 
                     </div>
                   </div>
 
                   <div class="item">
-                    <img src="img/aquel-zero-slider.png" alt="Фильтр Aquel Zero">
+                    <img src="img/aquel-zero-slider.png" alt="Фильтр для воды Aquel Zero">
                     <div class="carousel-caption">
 
                     </div>
@@ -142,14 +150,15 @@
 
               </div>
 
-            </div>
+            </div><!-- /.infographics-first-block__content -->
+
           </div><!-- /.infographics-wrapper-first-block -->
 
         </div><!-- /.infographics -->
 
         <div class="advice">
 
-          <h2 class="advice__title">Оставьте заявку на консультацию</h2>
+          <h2 class="advice__title">Получите консультацию</h2>
           <div class="container-article">
             <p class="advice__content">Это бесплатно</p>
             <p class="advice__content">Мы перезвоним прямо сейчас</p>
@@ -172,13 +181,7 @@
 
         </div><!-- /.promo-video -->
 
-        <div class="welcome-to-shop fadein-post">
-          <h2 class="welcome-to-shop__title">Добро пожаловать!</h2>
-          <p class="welcome-to-shop__subtitle">В мир чистой питьевой воды</p>
-          <div class="button-wrapper">
-            <a class="btn btn-default btn--welcome-to-shop" href="catalog.html" role="button">КАТАЛОГ</a>
-          </div>
-        </div>
+
 
         <div class="infobar">
           <ul class="infobar__list">
@@ -195,9 +198,9 @@
         <div class="container-article">
 
           <div class="footer__social">
-          <h4 class="footer__social-title">Нужна помощь?</h4>
-          <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
-          <p class="footer__text">Позвоните: <a href="tel:+79063620702">+7 906 362 07 02</a></p>
+            <h4 class="footer__social-title">Нужна помощь?</h4>
+            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Позвоните: <a href="tel:+79063620702">+7 906 362 07 02</a></p>
             <div class="footer__social-bar">
               <a href="#" class="social__icon">
                 <svg class="facebook-icon" width="30" height="30" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 10h-2v2h2v6h3v-6h1.82l.18-2h-2v-.833c0-.478.096-.667.558-.667h1.442v-2.5h-2.404c-1.798 0-2.596.792-2.596 2.308v1.692z"/></svg>
@@ -229,15 +232,10 @@
           <div class="footer__payment">
             <h4 class="footer__payment-title">Партнеры</h4>
             <p class="footer__payment-icon">
-              <span>
-
-              </span>
-              <span>
-
-              </span>
+              <img src="img/visa-mastercard-logo-small.png" width="200" height="70" alt="Visa и MasterCard логотип">
             </p>
             <div class="footer__payment-partner">
-              <img src="img/TinkoffBank_general_logo_2.png" alt="" width="200" height="200">
+              <img src="img/TinkoffBank_general_logo_2.png" alt="Тинькофф Банк логотип" width="200" height="200">
             </div>
           </div>
 
@@ -254,6 +252,11 @@
 
 
     </div><!-- /.container -->
+
+  <!-- CallBackKillerWidget -->
+  <link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
+  <script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=b83ff3938035134ebbd992ceba523e68" charset="UTF-8" async></script>
+  <!-- /.CallBackKillerWidget -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
