--- a/certificate-of-quality.html
+++ b/certificate-of-quality.html
@@ -121,9 +121,9 @@
         <div class="container-article">
 
           <div class="footer__social">
-          <h4 class="footer__social-title">Нужна помощь?</h4>
-          <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
-          <p class="footer__text">Позвоните: <a href="tel:+79063620702">+7 906 362 07 02</a></p>
+            <h4 class="footer__social-title">Нужна помощь?</h4>
+            <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
+            <p class="footer__text">Позвоните: <a href="tel:+79063620702">+7 906 362 07 02</a></p>
             <div class="footer__social-bar">
               <a href="#" class="social__icon">
                 <svg class="facebook-icon" width="30" height="30" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 10h-2v2h2v6h3v-6h1.82l.18-2h-2v-.833c0-.478.096-.667.558-.667h1.442v-2.5h-2.404c-1.798 0-2.596.792-2.596 2.308v1.692z"/></svg>
@@ -155,13 +155,10 @@
           <div class="footer__payment">
             <h4 class="footer__payment-title">Партнеры</h4>
             <p class="footer__payment-icon">
-              <span><svg width="50" height="50" viewBox="0 0 24 24"><path d="M21.5 6c.276 0 .5.224.5.5v11c0 .276-.224.5-.5.5h-19c-.276 0-.5-.224-.5-.5v-11c0-.276.224-.5.5-.5h19zm2.5 0c0-1.104-.896-2-2-2h-20c-1.105 0-2 .896-2 2v12c0 1.104.895 2 2 2h20c1.104 0 2-.896 2-2v-12zm-13.553 3.63h1.295l-.81 4.753h-1.295l.81-4.753zm3.907 1.908c-.453-.22-.73-.367-.727-.589 0-.198.235-.409.742-.409.424-.007.73.086.97.182l.116.055.176-1.03c-.257-.096-.659-.2-1.161-.2-1.28 0-2.182.645-2.189 1.568-.007.683.644 1.064 1.135 1.291.504.233.674.381.671.59-.003.318-.403.464-.775.464-.518 0-.794-.072-1.219-.249l-.167-.076-.182 1.064c.303.133.862.248 1.443.254 1.362 0 2.246-.637 2.256-1.624.003-.541-.342-.952-1.089-1.291zm5.646 2.846h-1.202l-.158-.712-1.659-.002-.273.714h-1.36l1.924-4.355c.136-.309.368-.394.678-.394h1.001l1.049 4.749zm-1.571-1.686l-.3-1.372-.088-.41-.172.454-.516 1.328h1.076zm-9.879-3.065l-1.268 3.241-.135-.659-.454-2.184c-.079-.3-.306-.39-.588-.401h-2.089l-.016.099c.508.123.962.3 1.361.521l1.152 4.128 1.371-.002 2.039-4.743h-1.373z"/></svg>
-              </span>
-              <span><svg width="50" height="50" viewBox="0 0 24 24"><path d="M21.5 6c.276 0 .5.224.5.5v11c0 .276-.224.5-.5.5h-19c-.276 0-.5-.224-.5-.5v-11c0-.276.224-.5.5-.5h19zm2.5 0c0-1.104-.896-2-2-2h-20c-1.105 0-2 .896-2 2v12c0 1.104.895 2 2 2h20c1.104 0 2-.896 2-2v-12zm-6.836 5.188c0 1.761-1.427 3.188-3.188 3.188s-3.188-1.427-3.188-3.188 1.428-3.188 3.189-3.188 3.187 1.427 3.187 3.188zm-6.73 0c0-1.087.493-2.061 1.266-2.711-.487-.302-1.061-.477-1.677-.477-1.761 0-3.188 1.427-3.188 3.188s1.427 3.188 3.188 3.188c.615 0 1.19-.175 1.677-.477-.773-.65-1.266-1.624-1.266-2.711zm-1.722 4.791v-.531c0-.2-.127-.335-.333-.336-.108-.002-.22.032-.297.151-.058-.094-.151-.151-.28-.151-.09 0-.179.027-.248.126v-.104h-.184v.846h.186v-.469c0-.147.081-.225.207-.225.122 0 .184.08.184.223v.471h.186v-.469c0-.147.085-.225.207-.225.126 0 .186.08.186.223v.471h.186zm2.752-.847h-.301v-.257h-.186v.257h-.172v.168h.172v.386c0 .197.076.313.294.313.08 0 .172-.025.23-.066l-.053-.158-.163.048c-.092 0-.122-.057-.122-.142v-.382h.301v-.167zm1.57-.021c-.106 0-.175.05-.223.124v-.103h-.182v.846h.184v-.475c0-.14.06-.218.181-.218l.115.021.057-.174-.132-.021zm-2.374.089c-.089-.058-.211-.089-.345-.089-.214 0-.352.103-.352.271 0 .138.103.223.292.25l.087.012c.101.014.149.041.149.089 0 .066-.067.103-.193.103-.127 0-.22-.041-.282-.089l-.088.143c.101.074.228.11.367.11.244 0 .386-.115.386-.276 0-.149-.112-.227-.296-.253l-.087-.012c-.08-.011-.143-.027-.143-.083 0-.062.06-.099.161-.099.108 0 .212.041.264.073l.08-.15zm4.933-.089c-.106 0-.175.05-.223.124v-.103h-.182v.846h.184v-.475c0-.14.06-.218.181-.218l.115.021.057-.174-.132-.021zm-2.373.445c0 .257.179.444.452.444.127 0 .212-.028.305-.101l-.089-.149c-.069.05-.142.076-.221.076-.147-.002-.255-.108-.255-.271 0-.163.108-.269.255-.271.08 0 .152.027.221.076l.089-.149c-.092-.073-.177-.101-.305-.101-.273.001-.452.189-.452.446zm1.725 0v-.423h-.184v.103c-.058-.076-.147-.124-.267-.124-.237 0-.423.186-.423.444 0 .259.186.444.423.444.12 0 .209-.048.267-.124v.103h.184v-.423zm-.685 0c0-.149.097-.271.257-.271.152 0 .255.117.255.271 0 .154-.103.271-.255.271-.16-.001-.257-.123-.257-.271zm-2.222-.445c-.248 0-.421.181-.421.444 0 .269.181.444.434.444.127 0 .244-.032.347-.119l-.09-.136c-.071.057-.161.089-.246.089-.119 0-.227-.055-.253-.207h.629l.004-.071c-.004-.263-.167-.444-.404-.444zm-.004.165c.119 0 .195.074.214.205h-.439c.02-.122.094-.205.225-.205zm4.62.28v-.763h-.184v.443c-.058-.076-.147-.124-.267-.124-.237 0-.423.186-.423.444 0 .259.186.444.423.444.12 0 .209-.048.267-.124v.103h.184v-.423zm-.685 0c0-.149.097-.271.257-.271.152 0 .255.117.255.271 0 .154-.103.271-.255.271-.16-.001-.257-.123-.257-.271zm-6.219 0v-.423h-.185v.103c-.058-.076-.147-.124-.267-.124-.237 0-.423.186-.423.444s.186.444.423.444c.12 0 .209-.048.267-.124v.103h.185v-.423zm-.686 0c0-.149.097-.271.257-.271.152 0 .255.117.255.271 0 .154-.103.271-.255.271-.159-.001-.257-.123-.257-.271z"/></svg>
-              </span>
+              <img src="img/visa-mastercard-logo-small.png" width="200" height="70" alt="Visa и MasterCard логотип">
             </p>
             <div class="footer__payment-partner">
-              <img src="img/TinkoffBank_general_logo_2.png" alt="" width="200" height="200">
+              <img src="img/TinkoffBank_general_logo_2.png" alt="Тинькофф Банк логотип" width="200" height="200">
             </div>
           </div>
 
@@ -172,12 +169,12 @@
 
       </section><!-- /.footer -->
 
-
-
-
-
-
     </div><!-- /.container -->
+
+  <!-- CallBackKillerWidget -->
+  <link rel="stylesheet" href="https://cdn.envybox.io/widget/cbk.css">
+  <script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=b83ff3938035134ebbd992ceba523e68" charset="UTF-8" async></script>
+  <!-- /.CallBackKillerWidget -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
