--- a/certificate-of-quality.html
+++ b/certificate-of-quality.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Все фильтры Aquel официально поставляются в Россию, проходят соответствующие экспертизы свидетельствующие о высоком качестве фильтрации воды.">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <title>Сертификаты качества продукции Aquel</title>
@@ -149,6 +153,7 @@
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
             </ul>
           </div>
 
