--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Deep-Aqua это официальный дилер Чешской компании Aquel по продаже фильтров для воды в России. Продажа, доставка и обслуживание в 31 городе России.">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <title>О Нас</title>
@@ -174,6 +178,7 @@
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
             </ul>
           </div>
 
