--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="В нашем блоге Вы узнаете какая бывает вода, как сделать ее чище и полезнее. Какие бывают способы фильтрации и обогащения воды. Какие фильтры подходят для дома или офиса, а какие для дачи.">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <title>Блог о фильтрах, чистой воде, здоровье, о водоочистительных системах Aquel</title>
@@ -239,6 +243,7 @@
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
             </ul>
           </div>
 
