--- a/catalog/aquel-1000.html
+++ b/catalog/aquel-1000.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Фильтр для воды Aquel 1000 это инновационная система фильтрации воды с последующим обогащением активными минералами. Строгий и современный дизайн. Подходит для дома и офиса. Бесплатная доставка и монтаж в 31 городе России.">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="../css/style.css">
     <title>Фильтр для воды Aquel 1000</title>
@@ -168,6 +172,7 @@
             <p class="advice__content">Мы перезвоним прямо сейчас</p>
             <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
             <p class="advice__content">И подарим бесплатное сервисное обслуживание на год!</p>
+            <p class="advice__content">Нет времени разговаривать? Напишите нам, мы онлайн.</p>
           </div>
           <div class="button-wrapper">
             <a href="#" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
@@ -218,6 +223,7 @@
               <li><a href="../contract-offer.html">Договор оферта</a></li>
               <li><a href="../certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="../privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="../acquired.html">Информация для пользователей фильтров</a></li>
             </ul>
           </div>
 
