--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Интернет-магазин по продаже фильтров для воды Aquel в России. Производство США, Чешская Республика, Италия. Запатентованные технологии, бесплатная доставка и монтаж. Официальный дилер.">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <title>Водоочистительные системы Aquel</title>
@@ -164,6 +168,7 @@
             <p class="advice__content">Мы перезвоним прямо сейчас</p>
             <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
             <p class="advice__content">И подарим бесплатное сервисное обслуживание на год!</p>
+            <p class="advice__content">Нет времени разговаривать? Напишите нам, мы онлайн.</p>
           </div>
           <div class="button-wrapper">
             <a href="#" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
@@ -174,9 +179,10 @@
         <div class="promo-video">
 
           <div class="promo__video">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://player.vimeo.com/video/114642714?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
+            <h2 class="promo__video-title">Вода это жизнь</h2>
+            <video width="100%" controls preload="metadata" poster="video/Aquel-1000-promo-poster.jpg">
+              <source src="video/Promo-video-Aquel-1000.mp4" type="video/mp4">
+            </video>
           </div>
 
         </div><!-- /.promo-video -->
@@ -226,6 +232,7 @@
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
             </ul>
           </div>
 
@@ -245,11 +252,6 @@
         </div>
 
       </section><!-- /.footer -->
-
-
-
-
-
 
     </div><!-- /.container -->
 
