--- a/catalog/aquel-200.html
+++ b/catalog/aquel-200.html
@@ -186,7 +186,7 @@
             <p class="advice__content">Нет времени разговаривать? Напишите нам, мы онлайн.</p>
           </div>
           <div class="button-wrapper">
-            <a href="#" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
+            <a href="#callbackwidget" class="btn btn-default btn--form">КОНСУЛЬТАЦИЯ</a>
           </div>
 
         </div><!-- /.advice -->
@@ -210,14 +210,23 @@
             <p class="footer__text">Напишите: <a href="mailto:support@deep-aqua.ru">support@deep-aqua.ru</a></p>
             <p class="footer__text">Позвоните: <a href="tel:+79063620702">+7 906 362 07 02</a></p>
             <div class="footer__social-bar">
-              <a href="#" class="social__icon">
+              <!-- <a href="#" class="social__icon">
                 <svg class="facebook-icon" width="30" height="30" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 10h-2v2h2v6h3v-6h1.82l.18-2h-2v-.833c0-.478.096-.667.558-.667h1.442v-2.5h-2.404c-1.798 0-2.596.792-2.596 2.308v1.692z"/></svg>
               </a>
               <a href="#" class="social__icon">
                 <svg class="twitter-icon" width="30" height="30" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.5 8.778c-.441.196-.916.328-1.414.388.509-.305.898-.787 1.083-1.362-.476.282-1.003.487-1.564.597-.448-.479-1.089-.778-1.796-.778-1.59 0-2.758 1.483-2.399 3.023-2.045-.103-3.86-1.083-5.074-2.572-.645 1.106-.334 2.554.762 3.287-.403-.013-.782-.124-1.114-.308-.027 1.14.791 2.207 1.975 2.445-.346.094-.726.116-1.112.042.313.978 1.224 1.689 2.3 1.709-1.037.812-2.34 1.175-3.647 1.021 1.09.699 2.383 1.106 3.773 1.106 4.572 0 7.154-3.861 6.998-7.324.482-.346.899-.78 1.229-1.274z"/></svg>
-              </a>
-              <a href="https://github.com/RamizIb/DeepAqua" class="social__icon">
+              </a> -->
+              <a href="https://github.com/RamizIb/DeepAqua" class="social__icon" target="_blank">
                 <svg class="github-icon" width="30" height="30" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 6c-3.313 0-6 2.686-6 6 0 2.651 1.719 4.9 4.104 5.693.3.056.396-.13.396-.289v-1.117c-1.669.363-2.017-.707-2.017-.707-.272-.693-.666-.878-.666-.878-.544-.373.041-.365.041-.365.603.042.92.619.92.619.535.917 1.403.652 1.746.499.054-.388.209-.652.381-.802-1.333-.152-2.733-.667-2.733-2.965 0-.655.234-1.19.618-1.61-.062-.153-.268-.764.058-1.59 0 0 .504-.161 1.65.615.479-.133.992-.199 1.502-.202.51.002 1.023.069 1.503.202 1.146-.776 1.648-.615 1.648-.615.327.826.121 1.437.06 1.588.385.42.617.955.617 1.61 0 2.305-1.404 2.812-2.74 2.96.216.186.412.551.412 1.111v1.646c0 .16.096.347.4.288 2.383-.793 4.1-3.041 4.1-5.691 0-3.314-2.687-6-6-6z"/></svg>
+              </a>
+              <a href="#" class="social__icon">
+                <svg class="od-icon" width="31" height="31" viewBox="0 0 50 50">
+                  <g>
+                    <path d="M32,25c-1,0-3,2-7,2s-6-2-7-2c-1.1,0-2,0.9-2,2c0,1,0.6,1.5,1,1.7c1.2,0.7,5,2.3,5,2.3l-4.3,5.4 c0,0-0.8,0.9-0.8,1.6c0,1.1,0.9,2,2,2c1,0,1.5-0.7,1.5-0.7S25,34,25,34c0,0,4.5,5.3,4.5,5.3S30,40,31,40c1.1,0,2-0.9,2-2 c0-0.6-0.8-1.6-0.8-1.6L28,31c0,0,3.8-1.6,5-2.3c0.4-0.3,1-0.7,1-1.7C34,25.9,33.1,25,32,25z"/>
+                    <path d="M25,10c-3.9,0-7,3.1-7,7s3.1,7,7,7c3.9,0,7-3.1,7-7S28.9,10,25,10z M25,20.5 c-1.9,0-3.5-1.6-3.5-3.5c0-1.9,1.6-3.5,3.5-3.5c1.9,0,3.5,1.6,3.5,3.5C28.5,18.9,26.9,20.5,25,20.5z"/>
+                  </g>
+                  <path d="M25,1C11.7,1,1,11.7,1,25s10.7,24,24,24s24-10.7,24-24S38.3,1,25,1z M25,44C14.5,44,6,35.5,6,25S14.5,6,25,6 s19,8.5,19,19S35.5,44,25,44z"/>
+                </svg>
               </a>
               <a href="#" class="social__icon">
                 <svg class="instagram-icon" width="30" height="30" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm4.615 6h-9.23c-.766 0-1.385.62-1.385 1.384v9.23c0 .766.619 1.386 1.385 1.386h9.23c.766 0 1.385-.62 1.385-1.385v-9.23c0-.765-.619-1.385-1.385-1.385zm-4.615 3.693c1.274 0 2.309 1.032 2.309 2.307s-1.035 2.307-2.309 2.307-2.307-1.033-2.307-2.307 1.033-2.307 2.307-2.307zm4.5 6.346c0 .255-.207.461-.461.461h-8.078c-.254 0-.461-.207-.461-.461v-5.039h.949c-.045.158-.078.32-.102.486-.023.168-.038.339-.038.514 0 2.04 1.652 3.693 3.691 3.693s3.691-1.653 3.691-3.693c0-.174-.015-.346-.039-.514-.023-.166-.058-.328-.102-.486h.95v5.039zm0-6.991c0 .255-.207.462-.461.462h-1.088c-.256 0-.461-.208-.461-.462v-1.087c0-.255.205-.461.461-.461h1.088c.254 0 .461.207.461.461v1.087z"/></svg>
