Answer tab block

--- a/acquired.html
+++ b/acquired.html
@@ -86,7 +86,7 @@
             <div class="acquired__card">
               <h2 class="acquired__title">Поздравляем с покупкой!</h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="acquired__content">Предлагаем Вам познакомиться с основателем и владельцем компании <strong>Aquel Bohemia</strong> Петром Бенешом, который в своем приветственном видео расскажет, почему так важно вовремя осуществлять сервисное обслуживание с помощью квалифицированных техников, с использованием оригинальных запчастей и картриджей.</p>
+              <p class="acquired__content">Предлагаем Вам познакомиться с основателем и владельцем компании <b>Aquel Bohemia</b> Петром Бенешом, который в своем приветственном видео расскажет, почему так важно вовремя осуществлять сервисное обслуживание с помощью квалифицированных техников, с использованием оригинальных запчастей и картриджей.</p>
               <p class="acquired__content">Если какие-то вопросы по поводу сервисного обслуживания для Вас останутся не до конца понятны, пожалуйста, напишите нам прямо сейчас, мы с удовольствием ответим.</p>
             </div>
 
@@ -99,14 +99,14 @@
             <div class="acquired__card">
               <h2 class="acquired__title"><strong>Важно: поддельный сервис!</strong></h2>
               <div class="divider-main divider-main--card"></div>
-              <p class="acquired__content">Уважаемые <strong>владельцы фильтров Aquel</strong>, обращаем Ваше внимание на <strong>беспрецедентный случай мошенничества</strong> со стороны бывших менеджеров российского подразделения Aquel, который привел к массовому ухудшению качества работы фильтрующего оборудования.</p>
+              <p class="acquired__content">Уважаемые <b>владельцы фильтров Aquel</b>, обращаем Ваше внимание на <strong>беспрецедентный случай мошенничества</strong> со стороны бывших менеджеров российского подразделения Aquel, который привел к массовому ухудшению качества работы фильтрующего оборудования.</p>
               <p class="acquired__content">Официальное письмо Петра Бенеша:</p>
               <p class="acquired__content">"В ходе внутреннего аудита компании ООО "AQUEL Plus" ИНН 3904606979 мной были обнаружены факты ненадлежащего исполнения управленческих функций со стороны некоторых наших бывших сотрудников в рамках гарантии на фильтрационные устройства Aquel, сервисных замен, порядка выполнения ремонта и решения претензий."</p>
               <p class="acquired__content"><strong>Будьте внимательны при осуществлении платежей за сервисное обслуживание!</strong></p>
               <p class="acquired__content">Единственая официальная компания, уполномоченная осуществлять сервисное обслуживание имеет следующее название и реквизиты:</p>
 
               <ul class="acquired__list">
-                <li><strong>ООО "AQUEL RU"</strong></li>
+                <li><b>ООО "AQUEL RU"</b></li>
                 <li>236029 г. Калининград</li>
                 <li>ул. Старшего лейтенанта Сибирякова, 23-б</li>
                 <li>ОГРН 1163926054104</li>
