--- a/catalog/aqua-air.html
+++ b/catalog/aqua-air.html
@@ -76,7 +76,7 @@
               <img class="single-product__img" src="../img/aqua-air.png" alt="">
             </div>
             <div class="single-product__button-wrapper">
-              <p class="single-product__pre-order-content">Предзаказ бесплатен, <strong>напишите нам</strong> и мы оповестим Вас, когда <strong>Aqua Air</strong> поступит в продажу</p>
+              <p class="single-product__pre-order-content">Предзаказ бесплатен, <b>напишите нам</b> и мы оповестим Вас, когда <b>Aqua Air</b> поступит в продажу</p>
 
                 <div class="button-wrapper">
                   <a href="#showchat" class="btn btn-default btn--buy">ПРЕДЗАКАЗ</a>
@@ -141,7 +141,7 @@
               <div role="tabpanel" class="tab-pane fade" id="delivery">
                 <p>Доставка Товара до покупателя осуществляется бесплатно. Средний срок доставки 7 дней, максимальный срок доставки 30 дней с момента оплаты.
                 </p>
-                <p>Очиститель воздуха <strong>Aqua Air</strong> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
+                <p>Очиститель воздуха <b>Aqua Air</b> может быть доставлен в любой город Российской Федерации и стран СНГ.</p>
               </div>
 
             </div>
