--- a/catalog/aquel-200.html
+++ b/catalog/aquel-200.html
@@ -94,8 +94,8 @@
             </ul>
 
             <div class="tab-content">
-              <div role="tabpanel" class="tab-pane fade in active" id="description"><p>Основой фильтров для воды <strong>Aquel</strong> является полупроницаемая мембрана. Эта, первоначально  военная технология, постепенно, благодаря техническому прогрессу, находит путь в доступные по цене фильтрующие устройства для быта и промышленных предприятий. Величина самой маленькой известной бактерии на Земле составляет 0,009 микрона, величина самого маленького известного вируса 0,02 микрона. Отверстие в полупроницаемой мембране имеет диаметр 0,0005 микрона!</p>
-              <p>Единственное, что мембрана пропускает, это молекула воды и некоторое количество минералов и солей. Благодаря этому можно получить совершенно чистую воду из любого загрязненного источника. Так же, благодаря физическому явлению, называемому осмотическое давление, фильтры для воды <strong>Aquel</strong> не нуждаются для своей работы в электричестве, достаточно небольшого давления воды на входе.</p>
+              <div role="tabpanel" class="tab-pane fade in active" id="description"><p>Основой фильтров для воды <b>Aquel</b> является полупроницаемая мембрана. Эта, первоначально  военная технология, постепенно, благодаря техническому прогрессу, находит путь в доступные по цене фильтрующие устройства для быта и промышленных предприятий. Величина самой маленькой известной бактерии на Земле составляет 0,009 микрона, величина самого маленького известного вируса 0,02 микрона. Отверстие в полупроницаемой мембране имеет диаметр 0,0005 микрона!</p>
+              <p>Единственное, что мембрана пропускает, это молекула воды и некоторое количество минералов и солей. Благодаря этому можно получить совершенно чистую воду из любого загрязненного источника. Так же, благодаря физическому явлению, называемому осмотическое давление, фильтры для воды <b>Aquel</b> не нуждаются для своей работы в электричестве, достаточно небольшого давления воды на входе.</p>
               </div>
               <div role="tabpanel" class="tab-pane fade" id="feature">
                 <p>
