--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="infographics">
-          <h2 class="infographics__title fadein-post">В чем преимущество фильтров для воды <strong>Aquel?</strong></h2>
+          <h2 class="infographics__title fadein-post">В чем преимущество фильтров для воды <b>Aquel?</b></h2>
 
           <div class="infographics-wrapper-first-block">
 
@@ -188,7 +188,7 @@
           <div class="container-article">
             <p class="advice__content">Это бесплатно</p>
             <p class="advice__content">Мы перезвоним прямо сейчас</p>
-            <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
+            <p class="advice__content">Расскажем о наших фильтрах и <b>патентах</b></p>
             <p class="advice__content">Подарим бесплатное сервисное обслуживание на год!*</p>
             <p class="advice__content advice__content--small">*Обслуживание на год всем новым покупателям в подарок!</p>
           </div>
@@ -201,13 +201,131 @@
         <div class="promo-video">
 
           <div class="promo__video">
-            <h2 class="promo__video-title">Мы это то, что мы пьем</h2>
+            <h2 class="promo__video-title">Мы то, что мы пьем</h2>
             <video width="100%" controls preload="metadata" poster="video/Aquel-1000-promo-poster.jpg">
               <source src="video/Promo-video-Aquel-1000.mp4" type="video/mp4">
             </video>
           </div>
 
         </div><!-- /.promo-video -->
+
+        <div class="answer-main">
+
+          <div class="container-article">
+            <h2 class="answer-main__title">Ответы на частые вопросы:</h2>
+
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                  <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Как сделать заказ?</a></h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                  <div class="panel-body">
+                    <ol>
+                      <li>Перейти в <a href="catalog.html" target="_blank">каталог</a>, выбрать продукт и нажать кнопку <b>оформить</b>.</li>
+                      <li>Написать нам в <a href="#showchat">онлайн чат</a> и мы по шагам расскажем Вам как совершить покупку.</li>
+                      <li>Заказать <a href="#callbackwidget">обратный звонок</a>, наш консультант подробно расскажет Вам о нашей продукции и подскажет как оформить покупку.</li>
+                    </ol>
+                  </div>
+                </div>
+              </div><!-- /.panel -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingTwo">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Как мы доставляем покупки?</a></h4>
+                </div>
+                <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                  <div class="panel-body">
+                    <ul>
+                      <li>У нас <strong>бесплатная</strong> доставка!</li>
+                      <li>Фильтры, требующие монтажа, мы доставляем в 31 город России.</li>
+                      <li>Фильтры, не требующие монтажа мы доставляем по всей России.</li>
+                      <li>Подробно о доставке конкретного фильтра можно узнать на страницах товара:</li>
+                      <li><a href="catalog/aquel-200.html" target="_blank">Фильтр Aquel 200</a></li>
+                      <li><a href="catalog/aquel-1000.html" target="_blank">Фильтр Aquel 1000</a></li>
+                      <li><a href="catalog/aquel-zero.html" target="_blank">Фильтр Aquel Zero</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div><!-- /.panel -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingThree">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Как мы принимаем оплату?</a></h4>
+                </div>
+                <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                  <div class="panel-body">
+                    <ul>
+                      <li>В партнерстве с <b>АО "Тинькофф Банк"</b> мы принимаем:</li>
+                      <li><b>VISA</b> и <b>MasterCard.</b></li>
+                      <li>Все платежи защищены и осуществляются на серверах Банка.</li>
+                      <li>Мы не храним Ваши платежные данные.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div><!-- /.panel -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingFour">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Возможно ли вернуть товар?</a></h4>
+                </div>
+                <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+                  <div class="panel-body">
+                    <ul>
+                      <li>Не проблема:</li>
+                      <li>Вы можете вернуть покупку в течении 7 дней.</li>
+                      <li>Однако, еще никто не возвращал наши фильтры!</li>
+                    </ul>
+                  </div>
+                </div>
+              </div><!-- /.panel -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingFive">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Какие гарантии мы даем?</a></h4>
+                </div>
+                <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+                  <div class="panel-body">
+                    <ul>
+                      <li>Минимальная <strong>гарантия 5 лет</strong>.</li>
+                      <li>Рекомендованный период сервисного обслуживания - раз в 10 месяцев.</li>
+                      <li>При своевременном обслуживании, вряд ли Вам придется покупать новый фильтр.</li>
+                      <li>Если обнаружится производственный брак, мы решим эту проблему за свой счет.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div><!-- /.panel -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingSix">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Почему мы так уверены в наших фильтрах?</a></h4>
+                </div>
+                <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+                  <div class="panel-body">
+                    <ul>
+                      <li>В 2017 году компании <b>Aquel</b> исполняется 17 лет!</li>
+                      <li><b>Aquel</b> работает в Чехии, Словакии, Польше, Германии, ОАЭ, Эстонии, Венгрии, Болгарии и многих других европейских странах.</li>
+                      <li>Открыто более 74 региональных офисов по всему миру.</li>
+                      <li>С 2007 года <b>Aquel</b> спонсор Лиги против рака</li>
+                      <li>С того же года сертификация качества ISO 9001</li>
+                      <li>С 2013 года запуск программы <b>Aquel Levna Energie</b> "Дешевая Энергия".</li>
+                      <li>И многое другое, о чем мы с удовольствием расскажем на странице <b><a href="#" target="_blank">Бренд Aquel</a></b>.</li>
+                    </ul>
+                  </div>
+                </div>
+              </div><!-- /.panel -->
+
+            </div><!-- /.panel-group -->
+
+          </div><!-- /.container-article -->
+        </div><!-- /.answer-main -->
 
         <div class="infobar">
           <ul class="infobar__list">
