--- a/aquel-tehnology.html
+++ b/aquel-tehnology.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="tehnology-review-card">
-              <p class="tehnology-review__content">Современных систем фильтрации воды немало. Одной из тех, что в последнее время стала использоваться особенно активно, является так называемый обратный осмос. Эта технология представлена в водоочистительных системах чешской компании <strong>Aquel</strong>. Вода проходит грубую очистку (два предварительных фильтра) и глубокую качественную.</p>
+              <p class="tehnology-review__content">Современных систем фильтрации воды немало. Одной из тех, что в последнее время стала использоваться особенно активно, является так называемый обратный осмос. Эта технология представлена в водоочистительных системах чешской компании <b>Aquel</b>. Вода проходит грубую очистку (два предварительных фильтра) и глубокую качественную.</p>
 
               <blockquote class="block-shadows"><p class="tehnology-review__blockquote">За счет этого получается добиться бактериальной очистки, органической, химической и радиологической.</p></blockquote>
             </div>
@@ -99,7 +99,7 @@
               <div class="divider-main divider-main--card"></div>
 
               <ul class="tehnology-review__list">
-                <li>Сначала вода проходит через обычный фильтр - грубой очистки, в <strong>Aquel</strong> - это картридж PX-20, который состоит из полипропилена сечением 20 микрон.</li>
+                <li>Сначала вода проходит через обычный фильтр - грубой очистки, в <b>Aquel</b> - это картридж PX-20, который состоит из полипропилена сечением 20 микрон.</li>
                 <li>Дальше вода поступает во вторую колбу, где находиться картридж PX-5+C, который состоит из 2-х частей - полипропилен сечением 5 микрон и активированный уголь. Задача активированного угля убрать из воды соединения хлора.</li>
                 <li>Третий этап - жидкость очищается <i>обратно-осмотической мембраной</i>. Мембрана убирает вирусы и бактерии, грибки, простейшие, споры, известь, соли тяжелых металлов, органические примеси, такие как, например, фенол и продукты радиологического распада. <i>КПД работы мембраны 85-98%</i>. Мембрана работает как сито. То что не прошло через мембрану (поток грязной воды) проходит через реструктор на выход в канализацию.</li>
               </ul>
@@ -114,13 +114,13 @@
               <div class="divider-main divider-main--card"></div>
               <p class="tehnology-review__content">В наших фильтрах не просто очищенная вода, которую можно использовать без кипячения (та вода, которая нужна человеку), наша установка ее дорабатывает "до ума", как многие пользователи говорят "волшебная", а врачи говорят "свежеприготовленная".</p>
 
-              <p class="tehnology-review__content"><strong>Где волшебство? Спросите Вы.</strong></p>
+              <p class="tehnology-review__content"><b>Где волшебство? Спросите Вы.</b></p>
 
               <ul class="tehnology-review__list">
-                <li>Четвертая стадия в нашей системе очистки воды - это <strong>обогащение минералами</strong> Кальцием и Магнием в ионной форме (это патент компании <strong>Aquel</strong>). Колба наполнена доломитом. Вода, проходя через доломит обогащается минералами (кальцием и магнием) что очень хорошо для человека. Кальций должен поступать в организм не только для формирования костей, но и для того, чтобы предотвращать вымывание кальция у взрослого или пожилого человека из уже сформировавшихся костей. Магний способствует усвоению кальция и калия. Дефицит магния влияет на передачу нервных и мышечных импульсов, вызывая раздражительность и нервозность. Защищает стенки сосудов от перегрузок. Принимает важное участие в формировании костной ткани и в обменных процессах. А еще, таким образом, мы меняем pH воды (на выходе, после фильтра <strong>Aquel</strong>, мы имеем слабощелочной pH). Воду, со значение по шкале pH выше 7 и отрицательным ОВП (окислительно-восстановительным потенциалом), называют "живой" или активированной. <i>"Живая вода"</i> - это природный биостимулятор, она прекрасно восстанавливает иммунную систему организма, обеспечивая антиоксидантную защиту. Нормализует метаболические процессы и улучшает кровообращение в тканях, нормализует энергетический потенциал клеток. Когда pH  более 7.1 вода приобретает свойство самопроизвольно структурироваться при стоянии.</li>
+                <li>Четвертая стадия в нашей системе очистки воды - это <b>обогащение минералами</b> Кальцием и Магнием в ионной форме (это патент компании <b>Aquel</b>). Колба наполнена доломитом. Вода, проходя через доломит обогащается минералами (кальцием и магнием) что очень хорошо для человека. Кальций должен поступать в организм не только для формирования костей, но и для того, чтобы предотвращать вымывание кальция у взрослого или пожилого человека из уже сформировавшихся костей. Магний способствует усвоению кальция и калия. Дефицит магния влияет на передачу нервных и мышечных импульсов, вызывая раздражительность и нервозность. Защищает стенки сосудов от перегрузок. Принимает важное участие в формировании костной ткани и в обменных процессах. А еще, таким образом, мы меняем pH воды (на выходе, после фильтра <b>Aquel</b>, мы имеем слабощелочной pH). Воду, со значение по шкале pH выше 7 и отрицательным ОВП (окислительно-восстановительным потенциалом), называют "живой" или активированной. <i>"Живая вода"</i> - это природный биостимулятор, она прекрасно восстанавливает иммунную систему организма, обеспечивая антиоксидантную защиту. Нормализует метаболические процессы и улучшает кровообращение в тканях, нормализует энергетический потенциал клеток. Когда pH  более 7.1 вода приобретает свойство самопроизвольно структурироваться при стоянии.</li>
                 <li>После минерализации вода поступает в накопительный бак, где она накапливается (8 литров) и хранится.</li>
                 <li>При открытии основного крана вода из накопительного бака проходит через ин-лайн фильтр. Ин-лайн фильтр служит для нейтрализации в воде привкусов и запахов, растворенных в воде.</li>
-                <li>Далее вода поступает в <a href="#energy-filter"><strong>*энерджи</strong></a> фильтр, где она заряжается энергией. Гранулы находящиеся внутри фильтра своим зарядом заставляют молекулы воды быстро двигаться, что позволяет нашему организму быстро и без особых затрат энергии впитывать такую воду.</li>
+                <li>Далее вода поступает в <a href="#energy-filter"><b>*энерджи</b></a> фильтр, где она заряжается энергией. Гранулы находящиеся внутри фильтра своим зарядом заставляют молекулы воды быстро двигаться, что позволяет нашему организму быстро и без особых затрат энергии впитывать такую воду.</li>
                 <li>На выходе из энерджи фильтра вода поступает в колбу ультрафиолетовой лампы, которая служит главным образом барьером для проникновения бактерий и вирусов извне через основной кран. После этого вода, проходя основной кран, выходит из системы.</li>
               </ul>
 
@@ -133,10 +133,10 @@
               <ol class="tehnology-review__list">
                 <li>Вода поступает в первую колбу 10 дюймов, в ней находится картридж PX-20, который состоит из полипропилена сечением 20 микрон, здесь вода проходит грубую очистку (задерживаются крупные фракции), все, что меньше 20 микрон проходит далее.</li>
                 <li>Вода поступает во вторую колбу 10 дюймов, в ней находится картридж PX-5+C, который состоит из двух частей. Нижняя часть - это полипропилен сечением 5 микрон, в верхней части в пластиковом корпусе находится активированный уголь, этот картридж выполняет две функции: задерживает крупные фракции более 5 микрон и нейтрализует в воде соединения хлора.</li>
-                <li>Вода из второй колбы 10 дюймов проходит через <strong>*2-х ходовой</strong> клапан на вход в колбу осмотической мембраны, где происходит окончательная очистка воды. Диапазон работы осмотической мембраны составляет 85% - 97% очистки от входного показателя. На выходе из мембраны поток очищенной воды через колено с обратным клапаном проходит в третью колбу 10 дюймов. А поток грязной воды проходит через реструктор на выход в канализацию.</li>
-                <li>Четвертая стадия это обогащение воды органическими минералами <i>Кальцием и Магнием</i> в количестве, которое требуется <i>согласно постановлению Чешской Республики</i>. Для минерализации используется особый патрон, разработанный и запатентованный Компанией <strong>Aquel</strong>. В патроне используется доломит, вода, проходя через доломит с небольшой скоростью, обогащается минералами. На выходе вода попадает в инлайн фильтр.</li>
+                <li>Вода из второй колбы 10 дюймов проходит через <b>*2-х ходовой</b> клапан на вход в колбу осмотической мембраны, где происходит окончательная очистка воды. Диапазон работы осмотической мембраны составляет 85% - 97% очистки от входного показателя. На выходе из мембраны поток очищенной воды через колено с обратным клапаном проходит в третью колбу 10 дюймов. А поток грязной воды проходит через реструктор на выход в канализацию.</li>
+                <li>Четвертая стадия это обогащение воды органическими минералами <i>Кальцием и Магнием</i> в количестве, которое требуется <i>согласно постановлению Чешской Республики</i>. Для минерализации используется особый патрон, разработанный и запатентованный Компанией <b>Aquel</b>. В патроне используется доломит, вода, проходя через доломит с небольшой скоростью, обогащается минералами. На выходе вода попадает в инлайн фильтр.</li>
                 <li>Инлайн фильтр служит для нейтрализации в воде привкусов и запахов, так как осмотическая мембрана не может убрать из воды растворенные в ней кислород и газы.</li>
-                <li>На выходе из инлайн фильтра вода поступает в биокерамический <strong>*энерджи</strong> фильтр, заставляющий молекулы воды "структурироваться".</li>
+                <li>На выходе из инлайн фильтра вода поступает в биокерамический <b>*энерджи</b> фильтр, заставляющий молекулы воды "структурироваться".</li>
                 <li id="energy-filter">Последним этапом вода поступает в колбу с <i>ультрафиолетовой лампой</i>, где под воздействием постоянного УФ-излучения вода стерилизуется. Колба с ультрафиолетовой лампой также служит барьером для проникновения бактерий и вирусов извне через основной кран. УФ-колба всегда ставится на выходе. После этого вода, проходя через основной кран, выходит из системы.</li>
               </ol>
             </div>
@@ -144,7 +144,7 @@
             <div class="tehnology-review-card">
               <h3>Фильтр Energy:</h3>
               <div class="divider-main divider-main--card"></div>
-              <p class="tehnology-review__content"><strong>*Энерджи</strong> - биокерамический материал вставки "Energy" изготовлен из 26 сортов керамических веществ и разных оксидов минерального происхождения, как, например, двуокись кремния SiO2, окись алюминия Al2O2, которые запечены при 1600 градусов Цельсия, а потом охлаждены. После охлаждения этот биокерамический материал способен излучать длинные инфракрасные лучи.</p>
+              <p class="tehnology-review__content"><b>*Энерджи</b> - биокерамический материал вставки "Energy" изготовлен из 26 сортов керамических веществ и разных оксидов минерального происхождения, как, например, двуокись кремния SiO2, окись алюминия Al2O2, которые запечены при 1600 градусов Цельсия, а потом охлаждены. После охлаждения этот биокерамический материал способен излучать длинные инфракрасные лучи.</p>
 
               <p class="tehnology-review__content">Инфракрасное излучение также называют "тепловым" излучением, так как все тела, твердые и жидкие, нагретые до определенной температуры, излучают энергию в инфракрасном спектре. При этом длины волн, излучаемые телом, зависят от температуры нагревания: чем выше температура, тем короче длина волны и выше интенсивность излучения.</p>
 
@@ -155,7 +155,7 @@
               <p class="tehnology-review__content">Этот процесс активирует молекулы воды в человеческом организме, улучшает самочувствие и, что очень важно, продлевает молодость. Этот процесс позволяет организму лучше, ыстрее и без лишних затрат энергии впитывать воду. Последние исследования в области биотехнологий показали, что инфракрасное излучение длинных волн необходимо для полноценного и правильного развития человеческого организма.</p>
 
               <div class="divider-main divider-main--card"></div>
-              <p class="tehnology-review__content"><strong>*2-ходовой клапан</strong> - перекрывает подачу воды для того, чтобы вода при наполненном емкостном баке не поступала в мембрану и не сливалась постоянно в канализацию. Благодаря этому мембрана сохраняет свой ресурс службы на долгое время.</p>
+              <p class="tehnology-review__content"><b>*2-ходовой клапан</b> - перекрывает подачу воды для того, чтобы вода при наполненном емкостном баке не поступала в мембрану и не сливалась постоянно в канализацию. Благодаря этому мембрана сохраняет свой ресурс службы на долгое время.</p>
             </div>
 
           </div><!-- /.container-article -->
